trying again to fix contrast error

--- a/index.css
+++ b/index.css
@@ -40,8 +40,10 @@ nav a {
     display: flex;
     color: #BCBAB8;
     margin-left: 10px;
-    background-color: rgb(0,0,0, 0.0);
-    
+}
+
+.heroContainer h1 {
+  background-color: rgb(0,0,0, 0.0); 
 }
 
 img {
